# projet_orchestration

./: .dockerignore  .env  .gitignore  Projet_2_Orchestration.md  README.md  app.db  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
Tests/: test_crud.py  test_debug.py  test_maths.py
app_api/: Dockerfile  api.py  crud.py  main.py  maths.py  pyproject.toml  schemas.py
app_api/Database/: database.py  models.py
app_front/: Dockerfile  main.py  pyproject.toml
app_front/pages/: 1_Ajouter.py  2_Lecture.py
docs/source/: conf.py  index.rst
