[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "furo>=2025.12.19",
    "httpx>=0.28.1",
    "myst-parser>=5.0.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.5",
    "sphinx-rtd-theme>=3.1.0",
    "sqlalchemy>=2.0.48",
]

[tool.pytest.ini_options]
# On force pytest à considérer le dossier app_api comme une source
pythonpath = ["."] 
testpaths = ["Tests"]

[tool.uv.workspace]
members = [
    "app_front",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]
